ghost/deployments/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-app
  labels:
    app: ghost-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-app
  template:
    metadata:
      labels:
        app: ghost-app
    spec:
      containers:
      - name: ghost-app
        image: ghost:5.72.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2368
        volumeMounts:
        - name: ghost-content
          mountPath: /var/lib/ghost/content
