ghost/deployments/ghost-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-mysql
  namespace: ghost
spec:
  selector:
    app: ghost-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
